--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,48 @@
         MAIN
     </main>
 <footer class="footer">
-    FOOTER
+    <div class="footer__content">
+        <div class="footer__container _container">
+            <div class="footer__inner">
+                <div class="footer__info">
+                    <h6 class="footer__info-title">
+                        Contact Us
+                    </h6>
+                    <p class="footer__info-text">
+                        Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
+                    </p>
+                    <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+                        ouremailaddress@email.com
+                    </a>
+                    <form class="footer__form" action="">
+                        <input class="footer__form-input" type="email" placeholder="Subscribe by email">
+                        <button class="footer__form-btn" type="submit">Send</button>
+                    </form>
+                </div>
+                <ul class="footer__social">
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="#">Facebook</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="#">Instagram</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="#">Pinterest</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="#">Whatsapp</a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="#">Youtube</a>
+                    </li>
+                </ul>
+                <nav class="footer__menu-list"></nav>
+            </div>
+        </div>
+    </div>
+    <div class="footer__copyright">
+        674 Gonzales Drive.   Washington, PA 15301
+    </div>
 </footer>
 </div>
 <script src="js/main.min.js"></script>
