--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,22 @@
                         <a class="footer__social-link" href="#">Youtube</a>
                     </li>
                 </ul>
-                <nav class="footer__menu-list"></nav>
+                <nav class="footer__menu">
+                    <ul class="footer__menu-list">
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">Delivery</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">FAQ</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">Help</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">More About Us</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
